--- a/view/HomePekerja.fxml
+++ b/view/HomePekerja.fxml
@@ -47,7 +47,7 @@
                <children>
                   <Button prefHeight="39.0" prefWidth="156.0" style="-fx-background-color: transparent; -fx-text-fill: WHITE;" text="PEKERJA" textAlignment="CENTER" textFill="WHITE">
                      <font>
-                        <Font name="System Bold" size="18.0" />
+                        <Font name="System Bold" size="23.0" />
                      </font></Button>
                </children>
             </HBox>
@@ -56,7 +56,7 @@
                   <Insets left="20.0" />
                </padding>
                <font>
-                  <Font name="System Bold" size="13.0" />
+                  <Font name="System Bold" size="16.0" />
                </font>
             </Button>
             <Button alignment="BASELINE_LEFT" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="316.0" style="-fx-background-color: #8FBC8F;" text="☻Data Diri" textFill="WHITE">
@@ -64,7 +64,7 @@
                   <Insets left="20.0" />
                </padding>
                <font>
-                  <Font name="System Bold" size="13.0" />
+                  <Font name="System Bold" size="16.0" />
                </font>
             </Button>
             <Button alignment="BASELINE_LEFT" layoutX="10.0" layoutY="70.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="316.0" style="-fx-background-color: #8FBC8F;" text="✎Kontrak Kerja" textFill="WHITE">
@@ -72,7 +72,7 @@
                   <Insets left="20.0" />
                </padding>
                <font>
-                  <Font name="System Bold" size="13.0" />
+                  <Font name="System Bold" size="16.0" />
                </font>
             </Button>
             <Button alignment="BASELINE_LEFT" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="316.0" style="-fx-background-color: #8FBC8F;" text="⎙Laporan" textFill="WHITE">
@@ -80,7 +80,7 @@
                   <Insets left="20.0" />
                </padding>
                <font>
-                  <Font name="System Bold" size="13.0" />
+                  <Font name="System Bold" size="16.0" />
                </font>
             </Button>
             <Button alignment="BASELINE_LEFT" layoutX="10.0" layoutY="256.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="316.0" style="-fx-background-color: #8FBC8F;" text="🔓 Logout" textFill="WHITE">
@@ -88,7 +88,7 @@
                   <Insets left="20.0" />
                </padding>
                <font>
-                  <Font name="System Bold" size="13.0" />
+                  <Font name="System Bold" size="16.0" />
                </font>
             </Button>
          </children>
@@ -478,7 +478,7 @@
                                                             </Text>
                                                          </children>
                                                       </VBox>
-                                                      <Text opacity="0.49" strokeType="OUTSIDE" strokeWidth="0.0" text="Maaf, lahan ini sudah full" textAlignment="CENTER" wrappingWidth="179.3333740234375" />
+                                                      <Text opacity="0.49" strokeType="OUTSIDE" strokeWidth="0.0" text="⚠Maaf, lahan ini sudah full" textAlignment="CENTER" wrappingWidth="179.3333740234375" />
                                                    </children>
                                                 </VBox>
                                              </children>
