--- a/view/HomePekerja.fxml
+++ b/view/HomePekerja.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -157,7 +156,7 @@
                      <children>
                         <VBox prefHeight="600.0" prefWidth="679.0">
                            <children>
-                              <HBox prefHeight="187.0" prefWidth="655.0" style="-fx-background-color: #eaa763; -fx-background-radius: 25;">
+                              <HBox prefHeight="165.0" prefWidth="660.0" style="-fx-background-color: #eaa763; -fx-background-radius: 25;">
                                  <VBox.margin>
                                     <Insets bottom="15.0" left="10.0" />
                                  </VBox.margin>
@@ -444,7 +443,7 @@
                                                                   <Insets left="5.0" top="5.0" />
                                                                </VBox.margin>
                                                             </Text>
-                                                            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="💵 : 220-30 juta/bulan">
+                                                            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="💵 : 20-30 juta/bulan">
                                                                <font>
                                                                   <Font name="Arial" size="15.0" />
                                                                </font>
@@ -529,11 +528,14 @@
                                           <Insets bottom="10.0" left="40.0" right="10.0" top="10.0" />
                                        </VBox.margin>
                                     </Label>
-                                    <CheckBox mnemonicParsing="false" prefHeight="25.0" prefWidth="161.0" style="-fx-background-color: white;" text="Pak Rudi, Malang" textFill="DARKSEAGREEN">
+                                    <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Pak Aris, Jakarta" textAlignment="CENTER" wrappingWidth="164.0130615234375">
+                                       <font>
+                                          <Font name="System Bold" size="15.0" />
+                                       </font>
                                        <VBox.margin>
-                                          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                          <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                        </VBox.margin>
-                                    </CheckBox>
+                                    </Text>
                                  </children>
                               </VBox>
                               <VBox prefHeight="200.0" prefWidth="100.0">
@@ -549,21 +551,22 @@
                                           <Insets bottom="10.0" left="40.0" right="10.0" top="10.0" />
                                        </VBox.margin>
                                     </Label>
-                                    <CheckBox mnemonicParsing="false" prefHeight="25.0" prefWidth="161.0" style="-fx-background-color: white;" text="Pak Bambang, Makasar" textFill="DARKSEAGREEN">
+                                    <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Pak Bambang, Solo" textAlignment="CENTER" wrappingWidth="158.0130615234375">
+                                       <font>
+                                          <Font name="System Bold" size="15.0" />
+                                       </font>
                                        <VBox.margin>
-                                          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                          <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                        </VBox.margin>
-                                    </CheckBox>
-                                    <CheckBox layoutX="10.0" layoutY="75.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="161.0" style="-fx-background-color: white;" text="Pak Bram, Pekanbaru" textFill="DARKSEAGREEN">
+                                    </Text>
+                                    <Text fill="WHITE" layoutX="10.0" layoutY="96.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pak Rudi, Karawang" textAlignment="CENTER" wrappingWidth="164.0130615234375">
+                                       <font>
+                                          <Font name="System Bold" size="15.0" />
+                                       </font>
                                        <VBox.margin>
-                                          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                          <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                        </VBox.margin>
-                                    </CheckBox>
-                                    <CheckBox layoutX="10.0" layoutY="75.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="161.0" style="-fx-background-color: white;" text="Bu Ani, Palangkaraya" textFill="DARKSEAGREEN">
-                                       <VBox.margin>
-                                          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                       </VBox.margin>
-                                    </CheckBox>
+                                    </Text>
                                  </children>
                               </VBox>
                            </children>
