--- a/view/Login.fxml
+++ b/view/Login.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.PasswordField?>
@@ -12,38 +11,34 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="bp" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="bp" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.LoginController">
    <left>
-      <AnchorPane prefHeight="200.0" prefWidth="350.0" style="-fx-background-color: #8FBC8F;" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="200.0" prefWidth="350.0" styleClass="nav-form" stylesheets="@../styles/dahsboardpemiliklahan.css" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="203.0" fitWidth="220.0" layoutX="74.0" layoutY="149.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="232.0" fitWidth="247.0" layoutX="57.0" layoutY="115.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../../../../../Downloads/ruangtani1.jpg" />
+                  <Image url="@../../../../../../../Downloads/ruangtani1-removebg-preview.png" />
                </image>
             </ImageView>
          </children>
       </AnchorPane>
    </left>
    <right>
-      <AnchorPane prefHeight="500.0" prefWidth="350.0" BorderPane.alignment="CENTER">
+      <AnchorPane fx:id="login_form" prefHeight="500.0" prefWidth="350.0" BorderPane.alignment="CENTER">
          <children>
-            <TextField layoutX="102.0" layoutY="198.0" promptText="User Name" style="-fx-background-color: transparent; -fx-border-color: #00F00; -fx-border-width: 0px 0px 2px 0px;" />
-            <PasswordField layoutX="102.0" layoutY="248.0" promptText="Password" style="-fx-background-color: transparent;" />
-            <FontAwesomeIconView fill="DARKSEAGREEN" glyphName="USER" layoutX="62.0" layoutY="220.0" size="20" />
-            <FontAwesomeIconView fill="DARKSEAGREEN" glyphName="KEY" layoutX="61.0" layoutY="270.0" size="20" text="" />
-            <Button layoutX="135.0" layoutY="321.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="80.0" style="-fx-background-color: #8FBC8F;" text="Login" textFill="WHITE" />
-            <Hyperlink layoutX="94.0" layoutY="408.0" style="-fx-background-color: transparent;" text="Forgot Your Password?" />
-            <FontAwesomeIconView fill="DARKSEAGREEN" glyphName="USERS" layoutX="157.0" layoutY="102.0" size="35" text="" />
+            <TextField fx:id="login_username" layoutX="102.0" layoutY="198.0" promptText="User Name" style="-fx-background-color: transparent; -fx-border-color: #00F00; -fx-border-width: 0px 0px 2px 0px;" />
+            <PasswordField fx:id="login_password" layoutX="102.0" layoutY="248.0" promptText="Password" style="-fx-background-color: transparent;" />
+            <Text layoutX="62.0" layoutY="220.0" style="-fx-font-size: 20; -fx-fill: DARKSEAGREEN;" text="👤" />
+            <Text layoutX="61.0" layoutY="270.0" style="-fx-font-size: 20; -fx-fill: DARKSEAGREEN;" text="🔑" />
+            <Button fx:id="login_login" layoutX="135.0" layoutY="307.0" mnemonicParsing="false" onAction="#handleLoginAction" prefHeight="34.0" prefWidth="80.0" style="-fx-background-color: #8FBC8F;" text="Login" textFill="WHITE" />
+            <Hyperlink fx:id="login_hyperlink" layoutX="96.0" layoutY="385.0" onAction="#handleSignupAction" style="-fx-background-color: transparent;" text="Create a New Account" />
+            <Text layoutX="157.0" layoutY="102.0" style="-fx-font-size: 35; -fx-fill: DARKSEAGREEN;" text="👥" />
             <Text fill="DARKSEAGREEN" layoutX="123.0" layoutY="140.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User Login">
                <font>
                   <Font size="22.0" />
                </font>
             </Text>
-            <Button layoutX="320.0" layoutY="-1.0" mnemonicParsing="false" style="-fx-background-color: transparent;">
-               <graphic>
-                  <FontAwesomeIconView fill="DARKSEAGREEN" glyphName="CLOSE" size="18" text="" />
-               </graphic>
-            </Button>
+            <Button fx:id="login_close" layoutX="320.0" layoutY="-1.0" mnemonicParsing="false" style="-fx-background-color: transparent; -fx-text-fill: DARKSEAGREEN;" text="❌" />
          </children>
       </AnchorPane>
    </right>
