--- a/view/Biodata.fxml
+++ b/view/Biodata.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -10,11 +9,11 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="bp" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: ## 006400006400;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: ## 006400006400;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.BiodataController">
    <top>
-      <VBox prefHeight="51.0" prefWidth="700.0" style="-fx-background-color: #8FBC8F;" BorderPane.alignment="CENTER">
+      <VBox prefHeight="51.0" prefWidth="700.0" styleClass="nav-form" stylesheets="@Gradasi.css" BorderPane.alignment="CENTER">
          <children>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="DATA DIRI" textAlignment="CENTER" wrappingWidth="700.3794555664062">
+            <Text fx:id="biodataArea" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="DATA DIRI" textAlignment="CENTER" wrappingWidth="700.3794555664062">
                <font>
                   <Font name="Arial Bold" size="25.0" />
                </font>
@@ -26,23 +25,24 @@
       </VBox>
    </top>
    <center>
-      <AnchorPane prefHeight="449.0" prefWidth="717.0" BorderPane.alignment="CENTER">
+      <AnchorPane fx:id="bp" onMouseClicked="#getBiodata" prefHeight="449.0" prefWidth="717.0" BorderPane.alignment="CENTER">
          <children>
-            <TextField layoutX="215.0" layoutY="83.0" prefHeight="25.0" prefWidth="315.0" promptText="Nama" style="-fx-background-color: transparent; -fx-border-color: #00F00; -fx-border-width: 0px 0px 2px 0px;" />
-            <PasswordField layoutX="212.0" layoutY="225.0" promptText="Nomor KTP" style="-fx-background-color: transparent;" />
             <Text layoutX="175.0" layoutY="104.0" style="-fx-font-size: 20; -fx-fill: DARKSEAGREEN;" text="👤" wrappingWidth="36.66661834716797">
                <font>
                   <Font size="35.0" />
                </font></Text>
-            <Button layoutX="297.0" layoutY="323.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="80.0" style="-fx-background-color: #8FBC8F;" text="Save" textFill="WHITE" />
-            <Button layoutX="631.0" layoutY="14.0" mnemonicParsing="false" style="-fx-background-color: transparent; -fx-text-fill: DARKSEAGREEN;" text="❌" />
+            <Button fx:id="biodata_save" layoutX="297.0" layoutY="323.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="80.0" style="-fx-background-color: #8FBC8F;" text="SAVE" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+            <Button fx:id="close_biodata" layoutX="658.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#closeWindow" style="-fx-background-color: transparent; -fx-text-fill: DARKSEAGREEN;" text="❌" />
             <Text layoutX="175.0" layoutY="246.0" style="-fx-font-size: 20; -fx-fill: DARKSEAGREEN;" text="💳" />
             <Text layoutX="175.0" layoutY="156.0" style="-fx-font-size: 20; -fx-fill: DARKSEAGREEN;" text="🏠" />
-            <PasswordField layoutX="212.0" layoutY="135.0" promptText="Alamat" style="-fx-background-color: transparent;" />
-            <Text layoutX="179.0" layoutY="288.0" style="-fx-font-size: 20; -fx-fill: DARKSEAGREEN;" text="⏳" />
-            <PasswordField layoutX="215.0" layoutY="268.0" prefHeight="25.0" prefWidth="363.0" promptText="Pengalaman/Riwayat Pekerjaan" style="-fx-background-color: transparent;" />
             <Text layoutX="175.0" layoutY="200.0" style="-fx-font-size: 20; -fx-fill: DARKSEAGREEN;" text="📱" />
-            <PasswordField layoutX="212.0" layoutY="179.0" promptText="Nomor Handphone" style="-fx-background-color: transparent;" />
+            <TextField fx:id="nama_biodata" layoutX="212.0" layoutY="83.0" prefHeight="25.0" prefWidth="337.0" promptText="Nama" />
+            <TextField fx:id="alamat_biodata" layoutX="212.0" layoutY="135.0" prefHeight="25.0" prefWidth="337.0" promptText="Alamat" />
+            <TextField fx:id="notelp_biodata" layoutX="212.0" layoutY="179.0" prefHeight="25.0" prefWidth="337.0" promptText="Nomor Telepon" />
+            <TextField fx:id="nomorktp_biodata" layoutX="212.0" layoutY="225.0" prefHeight="25.0" prefWidth="337.0" promptText="Nomor KTP" />
          </children>
       </AnchorPane>
    </center>
