--- a/view/Notifikasi.fxml
+++ b/view/Notifikasi.fxml
@@ -16,7 +16,7 @@
 
 <AnchorPane id="AnchorPane" prefHeight="667.0" prefWidth="1014.0" style="-fx-background-color: #8FBC8F;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.DashboardPemilikLahanController">
    <children>
-      <VBox prefHeight="667.0" prefWidth="155.0" style="-fx-background-color: #8FBC8F;" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox prefHeight="667.0" prefWidth="155.0" styleClass="nav-form" stylesheets="@Gradasi.css" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Pane prefHeight="100.0" prefWidth="155.0" style="-fx-background-color: white; -fx-background-radius: 30;">
                <padding>
@@ -56,7 +56,7 @@
                   <Font name="System Bold" size="16.0" />
                </font>
             </Button>
-            <Button alignment="BASELINE_LEFT" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="316.0" style="-fx-background-color: #8FBC8F;" text="☻Data Diri" textFill="WHITE">
+            <Button alignment="BASELINE_LEFT" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="316.0" styleClass="navbtn" stylesheets="@Gradasi.css" text="☻Data Diri" textFill="WHITE">
                <padding>
                   <Insets left="20.0" />
                </padding>
@@ -64,7 +64,7 @@
                   <Font name="System Bold" size="16.0" />
                </font>
             </Button>
-            <Button alignment="BASELINE_LEFT" layoutX="10.0" layoutY="70.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="316.0" style="-fx-background-color: #8FBC8F;" text="✎Kontrak Kerja" textFill="WHITE">
+            <Button alignment="BASELINE_LEFT" layoutX="10.0" layoutY="70.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="316.0" styleClass="navbtn" stylesheets="@Gradasi.css" text="✎Kontrak Kerja" textFill="WHITE">
                <padding>
                   <Insets left="20.0" />
                </padding>
@@ -72,7 +72,7 @@
                   <Font name="System Bold" size="16.0" />
                </font>
             </Button>
-            <Button alignment="BASELINE_LEFT" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="316.0" style="-fx-background-color: #8FBC8F;" text="⎙Laporan" textFill="WHITE">
+            <Button alignment="BASELINE_LEFT" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="316.0" styleClass="navbtn" stylesheets="@Gradasi.css" text="⎙Laporan" textFill="WHITE">
                <padding>
                   <Insets left="20.0" />
                </padding>
@@ -80,7 +80,7 @@
                   <Font name="System Bold" size="16.0" />
                </font>
             </Button>
-            <Button alignment="BASELINE_LEFT" layoutX="10.0" layoutY="256.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="316.0" style="-fx-background-color: #8FBC8F;" text="🔓 Logout" textFill="WHITE">
+            <Button alignment="BASELINE_LEFT" layoutX="10.0" layoutY="256.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="316.0" styleClass="navbtn" stylesheets="@Gradasi.css" text="🔓 Logout" textFill="WHITE">
                <padding>
                   <Insets left="20.0" />
                </padding>
@@ -90,9 +90,9 @@
             </Button>
          </children>
       </VBox>
-      <VBox layoutX="155.0" prefHeight="667.0" prefWidth="856.0" style="-fx-alignment: #8FBC8F;">
+      <VBox layoutX="155.0" prefHeight="667.0" prefWidth="867.0" styleClass="nav-form" stylesheets="@Gradasi.css">
          <children>
-            <VBox prefHeight="677.0" prefWidth="818.0" style="-fx-background-color: white; -fx-background-radius: 25;">
+            <VBox prefHeight="667.0" prefWidth="873.0" style="-fx-background-color: white; -fx-background-radius: 25;">
                <children>
                   <VBox prefHeight="93.0" prefWidth="856.0">
                      <children>
