--- a/view/Login.fxml
+++ b/view/Login.fxml
@@ -11,13 +11,13 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="bp" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.LoginController">
+<BorderPane fx:id="bp" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.LoginController">
    <left>
       <AnchorPane prefHeight="200.0" prefWidth="350.0" styleClass="nav-form" stylesheets="@../styles/dahsboardpemiliklahan.css" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="232.0" fitWidth="247.0" layoutX="57.0" layoutY="115.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="267.0" fitWidth="266.0" layoutX="42.0" layoutY="98.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../../../../../Downloads/ruangtani1-removebg-preview.png" />
+                  <Image url="@../Image/ruangtani1-removebg-preview.png" />
                </image>
             </ImageView>
          </children>
@@ -30,8 +30,8 @@
             <PasswordField fx:id="login_password" layoutX="102.0" layoutY="248.0" promptText="Password" style="-fx-background-color: transparent;" />
             <Text layoutX="62.0" layoutY="220.0" style="-fx-font-size: 20; -fx-fill: DARKSEAGREEN;" text="👤" />
             <Text layoutX="61.0" layoutY="270.0" style="-fx-font-size: 20; -fx-fill: DARKSEAGREEN;" text="🔑" />
-            <Button fx:id="login_login" layoutX="135.0" layoutY="307.0" mnemonicParsing="false" onAction="#handleLoginAction" prefHeight="34.0" prefWidth="80.0" style="-fx-background-color: #8FBC8F;" text="Login" textFill="WHITE" />
-            <Hyperlink fx:id="login_hyperlink" layoutX="96.0" layoutY="385.0" onAction="#handleSignupAction" style="-fx-background-color: transparent;" text="Create a New Account" />
+            <Button fx:id="login_button" layoutX="135.0" layoutY="307.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="34.0" prefWidth="80.0" style="-fx-background-color: #8FBC8F;" text="Login" textFill="WHITE" />
+            <Hyperlink fx:id="login_hyperlink" layoutX="96.0" layoutY="385.0" onAction="#goToSignup" style="-fx-background-color: transparent;" text="Create a New Account" />
             <Text layoutX="157.0" layoutY="102.0" style="-fx-font-size: 35; -fx-fill: DARKSEAGREEN;" text="👥" />
             <Text fill="DARKSEAGREEN" layoutX="123.0" layoutY="140.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User Login">
                <font>
